--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@metamask/providers": "^18.3.1",
-    "@metamask/sdk-react": "^0.31.4",
+    "@metamask/providers": "18.3.1",
+    "@metamask/sdk-react": "0.31.4",
     "cra-template-typescript": "1.2.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.7.2",
-    "viem": "^2.22.2"
+    "typescript": "5.7.2",
+    "viem": "2.22.2"
   },
   "scripts": {
     "start": "react-scripts start",
